Fix broken css

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -161,7 +161,7 @@ h1 {
 }
 
 .table-of-contents__left-border {
-    border-left: 2px solid var(--ifm-color-emphasis-300);
+    border-left-width: 2px;
 }
 
 /**
